# bangla_unicode_flutter

./: README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/bangla_unicode_flutter_example/: MainActivity.kt
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: bangla_unicode_flutter.podspec
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/bangla/: parser.dart  utils.dart
linux/: CMakeLists.txt
macos/: bangla_unicode_flutter.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  rules.json
rust/src/api/: mod.rs
rust/src/api/bangla/: mod.rs  parser.rs  utils.rs
windows/: CMakeLists.txt
