[package]
name = "bangla_unicode_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.3"
lazy_static = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
